--- a/style.css
+++ b/style.css
@@ -23,12 +23,9 @@
 
 
 
-
-
 .eleccion{
     width: 200px;
     height: 250px;
-    background-color: red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,4 +35,9 @@
 .cualidades{
     background-color: antiquewhite;
     color: rgb(0, 0, 0);
+}
+
+
+.linaje{
+    display: none;
 }
